# macroni

./: .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  README.md  biome.json  index.html  package.json  playback.html  pnpm-lock.yaml  studio.html  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml  test.yml
docs/: windows-signing.md
docs/adrs/: 0001-recordings-store.md  0002-event-capture.md  0003-playback-plan-engine.md  0004-recording-session.md  0005-coverage-gate.md  0006-mutation-runner.md  0007-acceptance-specs.md  0008-observability.md  README.md
docs/plans/: 2026-02-22-loop-playback-design.md  2026-04-15-video-preview-design.md  2026-04-15-video-preview-plan.md
docs/superpowers/plans/: 2026-06-19-studio-editor-phase-0-spike.md  2026-06-21-studio-editor-phase-1-framing.md  2026-07-03-perception-layer.md  2026-07-05-gesture-capture.md  2026-07-05-macro-runtime.md  2026-07-06-macro-canvas.md  2026-07-06-macro-snip.md  2026-07-07-macro-visual-wait.md  2026-07-13-macro-authoring-dock.md  2026-07-15-inout-clipping.md
docs/superpowers/specs/: 2026-06-19-studio-editor-design.md  2026-06-19-studio-editor-phase-0-findings.md  2026-06-28-perception-layer-design.md  2026-07-05-gesture-capture-design.md  2026-07-05-macro-graph-runtime-design.md  2026-07-06-macro-canvas-design.md  2026-07-06-macro-snip-design.md  2026-07-07-macro-visual-wait-design.md  2026-07-13-macro-authoring-dock-design.md  2026-07-15-inout-clipping-design.md
landing/: .gitignore  README.md  package.json  pnpm-lock.yaml
landing/convex/: schema.ts  sendConfirmation.ts  waitlist.ts
landing/convex/_generated/: api.d.ts
landing/src/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
landing/src/components/ui/: LiquidGlassCard.tsx
scripts/: sign-windows.ps1  verify-windows-signatures.ps1
src/: App.tsx  config.ts  index.css  main.tsx  scrollbar-styles.test.ts  types.ts
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json  tauri.windows-signing.conf.json
src-tauri/.cargo/: mutants.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/render-core/: Cargo.toml
src-tauri/render-core/src/: compositor.rs  decode.rs  doc.rs  encode.rs  engine.rs  frame.rs  gpu.rs  lib.rs
src-tauri/render-core/src/shaders/: background.wgsl  framed_video.wgsl  quad.wgsl  shadow.wgsl
src-tauri/render-core/tests/: composite_test.rs  compositor_test.rs  decode_test.rs  engine_test.rs  export_test.rs  gen_fixture.rs  offscreen_test.rs
src-tauri/src/: capture.rs  clicker.rs  config.rs  crash_log.rs  encoder.rs  event_capture.rs  key_mapping.rs  lib.rs  main.rs  observability.rs  permissions.rs  power.rs  preview_surface.rs  project_store.rs  recording_session.rs  recordings_store.rs  settings.rs  space_switch.rs  space_watch.rs  studio_export.rs  types.rs  windows_capture_backend.rs
src-tauri/src/macros/: commands.rs  mod.rs  probe.rs  runner.rs  store.rs
src-tauri/src/perception/: commands.rs  convert.rs  extractor.rs  gate.rs  mod.rs  ocr_macos.rs  png_io.rs  source.rs  template.rs  worker.rs
src-tauri/src/playback/: engine.rs  mod.rs  plan.rs  ports.rs
src-tauri/tests/: architecture.rs
src/__tests__/: App.test.tsx
src/acceptance/: recording-flow.acceptance.test.tsx
src/components/: ClickerPanel.tsx  DiagnosticsPanel.tsx  ExpandToggle.tsx  LiveEventDisplay.tsx  ModeToggle.tsx  PermissionAlert.tsx  PermissionGate.tsx  RecordingControls.tsx  RecordingDetail.tsx  RecordingsList.tsx  SettingsTab.tsx  VisibilityToggle.tsx  theme-provider.test.tsx  theme-provider.tsx
src/components/__tests__/: ClickerPanel.test.tsx  ExpandToggle.test.tsx  PermissionGate.test.tsx  RecordingControls.test.tsx  SettingsTab.test.tsx
src/components/playback/: EventTimeline.tsx  PlaybackView.tsx  SyncedEventList.tsx  VideoPlayer.tsx
src/components/playback/__tests__/: EventTimeline.test.tsx
src/components/studio/: BackgroundPicker.tsx  CreateTargetPopover.test.tsx  CreateTargetPopover.tsx  ExportButton.tsx  FramingControls.tsx  InputOnlyRecording.tsx  PerceptionOverlay.test.tsx  PerceptionOverlay.tsx  PerceptionPanel.test.tsx  PerceptionPanel.tsx  RecordingsMenu.tsx  StudioEditor.test.tsx  StudioEditor.tsx  StudioEventList.test.tsx  StudioEventList.tsx  StudioPlayer.test.tsx  StudioPlayer.tsx  StudioSpike.tsx  StudioTimeline.test.tsx  StudioTimeline.tsx  StudioTitleBar.test.tsx  StudioTitleBar.tsx
src/components/studio/macros/: AddNodePanel.test.tsx  AddNodePanel.tsx  AuthoringDock.test.tsx  AuthoringDock.tsx  MacroCanvas.tsx  MacroEditor.test.tsx  MacroEditor.tsx  MacroToolbar.test.tsx  MacroToolbar.tsx  MacrosMenu.tsx  SegmentNodeView.tsx  WaitNodeView.tsx  macro-editor.css
src/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx  input.tsx  resizable.tsx  select.tsx  table.tsx  tabs.tsx  tooltip.tsx
src/hooks/: index.ts  useAppSettings.ts  useAppUpdater.ts  useAutoResize.ts  useAutoScroll.ts  useAutoScrollToBottom.ts  useClicker.ts  useDiagnosticsSnapshot.ts  useInputEventListener.ts  useMacros.ts  usePermissionStatus.ts  usePlaybackPosition.ts  usePlaybackStatus.ts  usePlaybackSync.ts  useProjectDoc.ts  useRecorder.ts  useRecordingTitle.ts  useRecordings.ts  useVideoAssetUrl.ts  useWindow.ts
src/hooks/__tests__/: useAppSettings.test.ts  useAppUpdater.test.ts  useClicker.test.ts  useMacros.test.ts  usePermissionStatus.test.ts  usePlaybackSync.test.ts  useProjectDoc.test.ts
src/lib/: event-utils.test.tsx  event-utils.tsx  macro-chain.test.ts  macro-chain.ts  macro-flow.test.ts  macro-flow.ts  macro-segment.test.ts  macro-segment.ts  macro-wait.test.ts  macro-wait.ts  observability.test.ts  observability.ts  recording-format.ts  recording-trim.test.ts  recording-trim.ts  replay-selection.ts  time-format.test.ts  time-format.ts  video-rect.test.ts  video-rect.ts
src/test/: setup.ts
src/types/: project.ts
src/windows/: playback.tsx  studio.css  studio.tsx
