[package]
name = "macroni"
version = "0.1.0"
description = "A macro recorder desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "macroni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/Narsil/rdev" }
chrono = { version = "0.4", features = ["serde"] }
# Video capture: scap 0.1.0-beta.1 does not currently compile on Windows due to
# an upstream bug (calls `frame.timespan()` which doesn't exist in its
# `windows-capture` dep). We keep scap + the H.264 encoder on macOS/Linux only
# and skip video capture entirely on Windows for now. Event recording still
# works cross-platform. Revisit when scap fixes Windows or we switch libs.
openh264 = { version = "0.6", default-features = false, features = ["source"] }
mp4 = "0.14"

[target.'cfg(not(target_os = "windows"))'.dependencies]
scap = "=0.1.0-beta.1"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

