[workspace]
members = [".", "render-core"]
resolver = "2"

# `cargo tauri dev` is a debug build. The capture/encode hot paths (BGRA->I420,
# image resize) are pixel loops over multi-megabyte frames and are unusably slow
# unoptimized — they drop most frames. Optimize dependencies fully and the
# workspace lightly so dev capture runs at a real frame rate, without tanking
# incremental compile times.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package]
name = "macroni"
version = "0.1.0"
description = "A macro recorder desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "macroni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
render-core = { path = "render-core" }
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tracing"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdev = { git = "https://github.com/Narsil/rdev" }
chrono = { version = "0.4", features = ["serde"] }
# Video capture: scap 0.1.0-beta.1 does not currently compile on Windows due to
# an upstream bug (calls `frame.timespan()` which doesn't exist in its
# `windows-capture` dep). We keep scap + the H.264 encoder on macOS/Linux only
# and skip video capture entirely on Windows for now. Event recording still
# works cross-platform. Revisit when scap fixes Windows or we switch libs.
openh264 = { version = "0.6", default-features = false, features = ["source"] }
mp4 = "0.14"
# Data-parallelism for the per-frame BGRA->I420 conversion (real-time encode).
rayon = "1"
log = "0.4"
tauri-plugin-log = { version = "2.8.0", features = ["tracing"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
# Maintained fork of scap. The crates.io `scap` 0.1.0-beta.1 only delivers a
# single frame on macOS (its SCStream silently stalls after frame 1). The
# Open-GPUI fork fixes frame delivery. Package-renamed so code still uses `scap`.
scap = { package = "open-gpui-scap", version = "0.1.0-beta.1" }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
# Phase 0 spike (Task 5): native wgpu/Metal preview surface under the webview.
# Versions pinned to the family already resolved in Cargo.lock (objc2 0.6.x /
# objc2-* 0.3.x) — the same set wgpu-hal 29 + wry/tauri pull, so no extra copies.
wgpu = "29.0.3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSGeometry", "objc2-core-foundation"] }
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSGraphics", "NSResponder", "NSColor"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CAMetalLayer", "objc2-metal"] }
pollster = "0.3"
