[workspace]
members = [".", "render-core"]
resolver = "2"

# `cargo tauri dev` is a debug build. The capture/encode hot paths (BGRA->I420,
# image resize) are pixel loops over multi-megabyte frames and are unusably slow
# unoptimized — they drop most frames. Optimize dependencies fully and the
# workspace lightly so dev capture runs at a real frame rate, without tanking
# incremental compile times.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package]
name = "macroni"
version = "0.1.7"
description = "A macro recorder desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "macroni_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
render-core = { path = "render-core" }
tauri = { version = "2.11.5", features = ["macos-private-api", "protocol-asset", "tracing"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Fork: reads pixel-precision scroll deltas on macOS so listen/simulate
# agree on units (upstream reads line deltas but simulates pixels).
# Linux support uses rdev's X11 backend; the Wayland backend does not expose
# the full listen/simulate path this app needs yet.
rdev = { git = "https://github.com/leftautomated/rdev", branch = "pixel-scroll-deltas", features = ["x11"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
tauri-plugin-log = { version = "2.8.0", features = ["tracing", "colored"] }
png = "0.17"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
# Video capture: the maintained open-gpui fork fixes macOS frame delivery.
# Linux remains event-only because its PipeWire stack requires newer libspa
# headers than Ubuntu 22.04 ships. Windows uses sc-cap below.
openh264 = { version = "0.6", default-features = false, features = ["source"] }
mp4 = "0.14"
# Data-parallelism for the per-frame BGRA->I420 conversion (real-time encode).
rayon = "1"
# Maintained fork of scap. The crates.io `scap` 0.1.0-beta.1 only delivers a
# single frame on macOS (its SCStream silently stalls after frame 1). The
# Open-GPUI fork fixes frame delivery. Package-renamed so code still uses `scap`.
scap = { package = "open-gpui-scap", version = "0.1.0-beta.1" }
core-foundation = "0.10"
core-graphics = "0.24"
# Space-switch watcher (Task 4): Objective-C block for the NSWorkspace
# active-space observer. Version matches Cargo.lock's resolved block2 0.6.2.
block2 = "0.6"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
# Phase 0 spike (Task 5): native wgpu/Metal preview surface under the webview.
# Versions pinned to the family already resolved in Cargo.lock (objc2 0.6.x /
# objc2-* 0.3.x) — the same set wgpu-hal 29 + wry/tauri pull, so no extra copies.
wgpu = "29.0.3"
objc2 = "0.6"
objc2-foundation = { version = "0.3", features = ["NSData", "NSGeometry", "NSNotification", "NSOperation", "NSProcessInfo", "NSString", "block2", "objc2-core-foundation"] }
objc2-app-kit = { version = "0.3", features = ["NSView", "NSWindow", "NSGraphics", "NSResponder", "NSAnimationContext", "NSCell", "NSColor", "NSControl", "NSFont", "NSImage", "NSImageView", "NSScreen", "NSText", "NSTextField", "NSVisualEffectView", "NSWorkspace", "objc2-core-graphics", "objc2-quartz-core"] }
objc2-quartz-core = { version = "0.3", features = ["CALayer", "CAMediaTimingFunction", "CAMetalLayer", "objc2-metal"] }
# Perception (Task 7): macOS Vision framework for on-device text recognition (OCR).
objc2-vision = { version = "0.3", features = ["VNRequest", "VNRequestHandler", "VNRecognizeTextRequest", "VNObservation", "VNTypes", "objc2-core-foundation"] }
pollster = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
# Native Windows.Graphics.Capture backend. Keep this direct dependency instead
# of sc-cap 0.2, whose Windows adapter calls an API removed before release.
windows-capture = "1.5.0"
openh264 = { version = "0.6", default-features = false, features = ["source"] }
mp4 = "0.14"
rayon = "1"
