[package]
name = "render-core"
version = "0.1.0"
edition = "2021"

[dependencies]
openh264 = { version = "0.6", default-features = false, features = ["source"] }
mp4 = "0.14"
wgpu = "29.0.3"
bytemuck = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
pollster = "0.3"

[dev-dependencies]
pollster = "0.3"
