[package]
name = "render-core"
version = "0.1.0"
edition = "2021"

[dependencies]
openh264 = { version = "0.6", default-features = false, features = ["source"] }
mp4 = "0.14"
wgpu = "29.0.3"
bytemuck = "1"
pollster = "0.3"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
image = "0.25"
serde_json = "1"
