[package]
name = "render-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
bytemuck = "1"
image = "0.25"
openh264 = { version = "0.6", default-features = false, features = ["source"] }
mp4 = "0.14"
pollster = "0.3"
wgpu = "29.0.3"

[dev-dependencies]
serde_json = "1"
